Our Teams spacing fixed

--- a/src/OurTeam/OurTeam.css
+++ b/src/OurTeam/OurTeam.css
@@ -2,7 +2,7 @@
 
 .our-team {
     width: 100%;
-    min-height: 400vh;
+    /* min-height: 400vh; */
     background-size: cover;
     background-color: #141131;
     margin: 0;
@@ -11,7 +11,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-
+    padding-bottom: 10vw;
 }
 
 .Heading {
